--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-    "name": "jesyll",
+    "name": "recipe",
     "dependencies": ["narwhal", "json-template", "markdown"],
     "author": "Andy Chu (andy@chubot.org)",
-    "description": "Static site generator based on Jekyll.",
+    "description": "Static doc generator",
     "keywords": ["doc", "documentation", "html", "markdown", "jsontemplate"]
 }
